--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -7,10 +7,11 @@
   android:orientation="vertical" >
 
   <TextView
+    android:id="@+id/question_text_view"
     android:layout_height="wrap_content"
     android:layout_width="wrap_content"
     android:padding="24dp"
-    android:text="@string/question_text" />
+    />
   <LinearLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -24,7 +25,15 @@
       android:id="@+id/false_button"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:text="@string/false_button" />
+      android:text="@string/false_button"/>
+    <Button
+      android:id="@+id/next_button"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="@string/next_button"
+      android:drawableRight="@drawable/arrow_right"
+      android:drawablePadding="4dp"/>
+
 
    </LinearLayout>
 
