--- a/app/src/main/res/layout/activity_cheat.xml
+++ b/app/src/main/res/layout/activity_cheat.xml
@@ -27,4 +27,8 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/show_answer_button"/>
+  <TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="API Level 28"/>
 </LinearLayout>
